--- a/app/src/main/res/layout-v26/activity_graficas.xml
+++ b/app/src/main/res/layout-v26/activity_graficas.xml
@@ -9,7 +9,7 @@
 
 <TextView
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="80dp"
     android:text="RESULTADOS DE LA CAPTURA"
     android:gravity="center"
     android:layout_gravity="center_horizontal"
@@ -19,6 +19,7 @@
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingHorizontal="100dp"/>
 
 </LinearLayout>
